@@ -1,3 +1,9 @@
+2008-05-15  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-stream-buffer.c (stream_read): Break if
+	g_mime_stream_read() returns 0 as well (meaning EOF, no more data
+	to read) and don't keep looping. Fixes bug #533331.
+
 2008-05-03  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
